--- a/minimal-react-setup/package.json
+++ b/minimal-react-setup/package.json
@@ -4,8 +4,7 @@
   "description": "https://www.robinwieruch.de/minimal-react-webpack-babel-setup",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open --mode development",
-    "start": "webpack --mode=development",
+    "start": "webpack-dev-server --open --hot --mode development",
     "build": "webpack --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +17,8 @@
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.0",
     "react-hot-loader": "^4.12.18",
     "sass-loader": "^8.0.0",
